fix(material/button): prevents mat-icon svg size and visibility issues (#32338)
Updates Angular Components Button component styling for mat-icon-buttons and all
mat-fab-button variants. Only includes min-height of min-content for icons in
other button variants so that when displaying svg icons such as fontawesome
the height fits into the icon and is visible in safari browsers

--- a/src/material/button/button.scss
+++ b/src/material/button/button.scss
@@ -10,7 +10,8 @@ $fallbacks: m3-button.get-tokens();
 .mat-mdc-button-base {
   text-decoration: none;
   // Makes button icon not cut off/shrink making the icon visible to fix b/411228600
-  & .mat-icon {
+  // Exclude icon button and FABs which have fixed dimensions to fix 32338
+  &:not(.mat-mdc-icon-button):not(.mat-mdc-fab-base) .mat-icon {
     // stylelint-disable material/no-prefixes
     min-height: fit-content;
     flex-shrink: 0;
